--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,12 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title>Hello!</title>
+    <title>CS4400</title>
 </head>
 <body>
-    <p>I image I put links to the pages that work here</p>
+    <h1>Hello!</h1>
+    <p>I image I put links to the pages that work here:
+    <a href="createCorporation">Create Corporation</a>
+    <a href="createBank">Create Bank</a></p>
 </body>
 </html>
