create corporation complete

--- a/public/createCorporation.html
+++ b/public/createCorporation.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>CS4400</title>
+    <script src="/js/createCorporation.js" defer></script>
 </head>
 <body>
     <h1>Create Corporation</h1>
@@ -9,9 +10,9 @@
         <div><label for="id">Coporation ID:</label> <input id="id" /></div>
         <div><label for="long_name">Long Name:</label> <input id="long_name" /></div>
         <div><label for="short_name">Short Name:</label> <input id="short_name" /></div>
-        <div><label for="reserved_assets">Reserved Assets</label> <input id="reserved_assets" /></div>
+        <div><label for="reserved_assets">Reserved Assets:</label> <input id="reserved_assets" /></div>
         <button>Cancel</button>
-        <button>Create Coporation</button>
+        <input type="submit" value="Create Corporation" id="create">  
     </form>
 </body>
 </html>
