--- a/public/createBank.html
+++ b/public/createBank.html
@@ -18,7 +18,7 @@
         <div><label for="reserved_assets">Reserved Assets</label> <input id="reserved_assets" /></div>
         <!-- figure out what this stuff ieven is-->
         <button>Cancel</button>
-        <button>Create Coporation</button>
+        <button>Create Bank</button>
     </form>
 </body>
 </html>
