--- a/public/Admin.html
+++ b/public/Admin.html
@@ -1,1 +1,18 @@
-<p>Congrats you made it :D</p>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>CS4400</title>
+</head>
+<body>
+    <h1>Admin Menu</h1>
+    <button>View Stats</button>
+    <button onclick="window.location.href='/createCorporation'">Create Corporation</button>
+    <button>Manage Users</button>
+    <button>Hire Worker</button>
+    <button>Replace Manager</button>
+    <button>Create Fee</button>
+    <button>Manage Overdraft</button>
+    <button>Pay Employees</button>
+    <button>Manage Accounts</button>
+</body>
+</html>
