--- a/public/createBank.html
+++ b/public/createBank.html
@@ -7,7 +7,7 @@
 <body>
     <h1>Create Bank</h1>
     <form>
-        <div><label for="id">Bank ID:</label> <input id="id" /></div>
+        <div><label for="id">Bank ID:</label> <input id="bid" /></div>
         <div><label for="name">Name:</label> <input id="name" /></div>
         <h3>Address Info</h3>
         <div><label for="street">Street</label> <input id="street" /></div>
@@ -17,6 +17,9 @@
         <h3>Operation Info</h3>
         <!-- need to make most of these drop down -->
         <div><label for="reserved_assets">Reserved Assets</label> <input id="reserved_assets" /></div>
+        <div><label for="manager">placeholder</label> <input id="manager" /></div>
+        <div><label for="corp_id">placeholder</label> <input id="cid" /></div>
+        <div><label for="employee">placeholder</label> <input id="employee" /></div>
         <!-- figure out what this stuff ieven is-->
         <button>Cancel</button>
         <input type="submit" value="Create Bank" id="create"> 
