cancel button rework

--- a/public/Admin.html
+++ b/public/Admin.html
@@ -14,5 +14,6 @@
     <button>Manage Overdraft</button>
     <button>Pay Employees</button>
     <button>Manage Accounts</button>
+    <button onclick="window.location.href='/createBank'">Create Bank</button>
 </body>
 </html>
