--- a/public/createCorporation.html
+++ b/public/createCorporation.html
@@ -11,8 +11,9 @@
         <div><label for="long_name">Long Name:</label> <input id="long_name" /></div>
         <div><label for="short_name">Short Name:</label> <input id="short_name" /></div>
         <div><label for="reserved_assets">Reserved Assets:</label> <input id="reserved_assets" /></div>
-        <button>Cancel</button>
+        <input type="button" value="Cancel" name="cancel" id onclick="window.location.href='/adminMenu'" />
         <input type="submit" value="Create Corporation" id="create">  
     </form>
+
 </body>
 </html>
