fixed login error
can show login error code

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>CS4400</title>
+    <script src="/js/login.js" defer></script>
 </head>
 <body>
     <form method="POST" action="/attempt_login">
@@ -18,9 +19,9 @@
         </div>
     </form>
     <p hidden id="message"></p>
-    <div>
+<!--    <div>
         <p>Not a user? <a href="registration">Register here</a></p>
     </div>
-
+-->
 </body>
 </html>
