added some redirects

--- a/public/payEmployees.html
+++ b/public/payEmployees.html
@@ -6,6 +6,11 @@
 </head>
 <body>
     <h1>Pay employees</h1>
+    <!-- <form>
+        <input type="button" value="Cancel" name="cancel" onclick="window.location.href='/adminMenu'" />
+        <input type="submit" value="Create Corporation" id="create">  
+    </form> -->
     <button id="pay">Pay all employees</button>
+    <button id="cancel" onclick="window.location.href='/adminMenu'">Cancel</button>
 </body>
 </html>
