add a message on the screen to display errors

--- a/public/createCorporation.html
+++ b/public/createCorporation.html
@@ -12,8 +12,8 @@
         <div><label for="short_name">Short Name:</label> <input id="short_name" /></div>
         <div><label for="reserved_assets">Reserved Assets:</label> <input id="reserved_assets" /></div>
         <input type="button" value="Cancel" name="cancel" onclick="window.location.href='/adminMenu'" />
-        <input type="submit" value="Create Corporation" id="create">  
+        <input type="submit" value="Create Corporation" id="create">
     </form>
-
+    <p hidden id="message"></p>
 </body>
 </html>
