--- a/public/createCustomer.html
+++ b/public/createCustomer.html
@@ -9,7 +9,8 @@
     <form>
         <div><label for="id">Employee ID:</label> <input id="id" /></div>
         <button>Cancel</button>
-        <input type="submit" value="Create Customer" id="create"> 
+        <input type="submit" value="Create Customer" id="create">
     </form>
+    <p hidden id="message"></p>
 </body>
 </html>
