--- a/public/createEmployee.html
+++ b/public/createEmployee.html
@@ -12,7 +12,8 @@
         <div><label for="num_payments"># of Payments</label> <input id="num_payments" /></div>
         <div><label for="earnings">Accumulated Earnings</label> <input id="earnings" /></div>
         <button>Cancel</button>
-        <input type="submit" value="Create Employee" id="create"> 
+        <input type="submit" value="Create Employee" id="create">
     </form>
+    <p hidden id="message"></p>
 </body>
 </html>
