--- a/public/customerMenu.html
+++ b/public/customerMenu.html
@@ -1,1 +1,13 @@
-<p>Wahoooo</p>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>CS4400</title>
+</head>
+<body>
+    <h1>Customer Menu</h1>
+    <button>Manage Accounts</button>
+    <button>Deposit / Withdrawal</button>
+    <button>Manage Overdraft</button>
+    <button>Make Transfer</button>
+</body>
+</html>
