--- a/public/Customer.html
+++ b/public/Customer.html
@@ -9,5 +9,6 @@
     <button>Deposit / Withdrawal</button>
     <button>Manage Overdraft</button>
     <button>Make Transfer</button>
+    <button>Sign Out</button>
 </body>
 </html>
