--- a/public/viewStats.html
+++ b/public/viewStats.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h1>View Stats</h1>
-    <button>Display Account Stats</button>
+    <button onclick="window.location.href='/displayAccountStats'">Display Account Stats</button>
     <button>Display Corporation Stats</button>
     <button>Display Bank Stats</button>
     <button>Display Customer Stats</button>
