--- a/public/Admin.html
+++ b/public/Admin.html
@@ -7,7 +7,7 @@
     <h1>Admin Menu</h1>
     <button>View Stats</button>
     <button onclick="window.location.href='/createCorporation'">Create Corporation</button>
-    <button>Manage Users</button>
+    <button onclick="window.location.href='/manageUsers'">Manage Users</button>
     <button>Hire Worker</button>
     <button>Replace Manager</button>
     <button onclick="window.location.href='/createFee'">Create Fee</button>
