--- a/public/Manager.html
+++ b/public/Manager.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h1>Manager Menu</h1>
-    <button>Pay Employee</button>
+    <button onclick="window.location.href = '/payEmployees'">Pay Employee</button>
     <button>Hire Worker</button>
 </body>
 </html>
