--- a/public/manageUsers.html
+++ b/public/manageUsers.html
@@ -6,7 +6,7 @@
 <body>
     <h1>Manage Users</h1>
     <button>Create Employee Role</button>
-    <button>Create Customer Role</button>
+    <button onclick="window.location.href='/createCustomerRole'">Create Customer Role</button>
     <button>Stop Employee Role</button>
     <button>Stop Customer Role</button>
 </body>
