--- a/public/manageUsers.html
+++ b/public/manageUsers.html
@@ -5,9 +5,9 @@
 </head>
 <body>
     <h1>Manage Users</h1>
-    <button>Create Employee Role</button>
+    <button onclick="window.location.href='/createEmployeeRole'">Create Employee Role</button>
     <button onclick="window.location.href='/createCustomerRole'">Create Customer Role</button>
-    <button>Stop Employee Role</button>
-    <button>Stop Customer Role</button>
+    <button onclick="window.location.href='/removeEmployeeRole'">Stop Employee Role</button>
+    <button onclick="window.location.href='/removeCustomerRole'">Stop Customer Role</button>
 </body>
 </html>
