--- a/public/viewStats.html
+++ b/public/viewStats.html
@@ -6,9 +6,9 @@
 <body>
     <h1>View Stats</h1>
     <button onclick="window.location.href='/displayAccountStats'">Display Account Stats</button>
-    <button>Display Corporation Stats</button>
-    <button>Display Bank Stats</button>
-    <button>Display Customer Stats</button>
-    <button>Display Employee Stats</button>
+    <button onclick="window.location.href='/displayCorporationStats'">Display Corporation Stats</button>
+    <button onclick="window.location.href='/displayBankStats'">Display Bank Stats</button>
+    <button onclick="window.location.href='/displayCustomerStats'">Display Customer Stats</button>
+    <button onclick="window.location.href='/displayEmployeeStats'">Display Employee Stats</button>
 </body>
 </html>
