--- a/public/customerMenu.html
+++ b/public/customerMenu.html
@@ -9,6 +9,6 @@
     <button>Deposit / Withdrawal</button>
     <button>Manage Overdraft</button>
     <button>Make Transfer</button>
-    <button>Sign Out</button>
+    <button onclick="window.location.href='logout'">Sign Out</button>
 </body>
 </html>
