--- a/public/Admin.html
+++ b/public/Admin.html
@@ -8,7 +8,7 @@
     <button onclick="window.location.href='/viewStats'">View Stats</button>
     <button onclick="window.location.href='/createCorporation'">Create Corporation</button>
     <button onclick="window.location.href='/manageUsers'">Manage Users</button>
-    <button>Hire Worker</button>
+    <button onclick="window.location.href='/hireWorker'">Hire Worker</button>
     <button>Replace Manager</button>
     <button onclick="window.location.href='/createFee'">Create Fee</button>
     <button onclick="window.location.href='/startOverdraft'">Manage Overdraft</button>
