--- a/public/Manager.html
+++ b/public/Manager.html
@@ -6,6 +6,6 @@
 <body>
     <h1>Manager Menu</h1>
     <button onclick="window.location.href = '/payEmployees'">Pay Employee</button>
-    <button>Hire Worker</button>
+    <button onclick="window.location.href='/hireWorker'">Hire Worker</button>
 </body>
 </html>
