--- a/public/customerMenu.html
+++ b/public/customerMenu.html
@@ -6,7 +6,8 @@
 <body>
     <h1>Customer Menu</h1>
     <button>Manage Accounts</button>
-    <button>Deposit / Withdrawal</button>
+    <button onclick="window.location.href='/depositPage'">Deposit</button>
+    <button onclick="window.location.href='/withdrawPage'">Withdrawal</button>
     <button onclick="window.location.href='/startOverdraft'">Manage Overdraft</button>
     <button>Make Transfer</button>
     <button onclick="window.location.href='logout'">Sign Out</button>
