--- a/public/Admin.html
+++ b/public/Admin.html
@@ -11,7 +11,7 @@
     <button onclick="window.location.href='/hireWorker'">Hire Worker</button>
     <button onclick="window.location.href='/replaceManager'">Replace Manager</button>
     <button onclick="window.location.href='/createFee'">Create Fee</button>
-    <button onclick="window.location.href='/startOverdraft'">Manage Overdraft</button>
+    <button onclick="window.location.href='/manageOverdraft'">Manage Overdraft</button>
     <button onclick="window.location.href='/payEmployees'">Pay Employees</button>
     <button>Manage Accounts</button>
     <button onclick="window.location.href='/createBank'">Create Bank</button>
