--- a/public/customerMenu.html
+++ b/public/customerMenu.html
@@ -8,7 +8,7 @@
     <button>Manage Accounts</button>
     <button onclick="window.location.href='/depositPage'">Deposit</button>
     <button onclick="window.location.href='/withdrawPage'">Withdrawal</button>
-    <button onclick="window.location.href='/startOverdraft'">Manage Overdraft</button>
+    <button onclick="window.location.href='/manageOverdraft'">Manage Overdraft</button>
     <button>Make Transfer</button>
     <button onclick="window.location.href='logout'">Sign Out</button>
 </body>
