add and remove people from customer account by customer

--- a/public/customerMenu.html
+++ b/public/customerMenu.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h1>Customer Menu</h1>
-    <button>Manage Accounts</button>
+    <button onclick="window.location.href='/customerAccountAccess'">Manage Accounts</button>
     <button onclick="window.location.href='/depositPage'">Deposit</button>
     <button onclick="window.location.href='/withdrawPage'">Withdrawal</button>
     <button onclick="window.location.href='/manageOverdraft'">Manage Overdraft</button>
