omg manager accountsssss
still needs to be tested

--- a/public/Admin.html
+++ b/public/Admin.html
@@ -13,7 +13,8 @@
     <button onclick="window.location.href='/createFee'">Create Fee</button>
     <button onclick="window.location.href='/manageOverdraft'">Manage Overdraft</button>
     <button onclick="window.location.href='/payEmployees'">Pay Employees</button>
-    <button>Manage Accounts</button>
+    <button onclick="window.location.href='/customerAccountAccess'">Manage Accounts</button>
+    <button onclick="window.location.href='/adminAccountAccess'">Create new Account</button>
     <button onclick="window.location.href='/createBank'">Create Bank</button>
 </body>
 </html>
