Add some prints

--- a/public/Manager.html
+++ b/public/Manager.html
@@ -7,5 +7,6 @@
     <h1>Manager Menu</h1>
     <button onclick="window.location.href = '/payEmployees'">Pay Employee</button>
     <button onclick="window.location.href='/hireWorker'">Hire Worker</button>
+    <button onclick="window.location.href='/logout'">Sign Out</button>
 </body>
 </html>
