--- a/public/customerMenu.html
+++ b/public/customerMenu.html
@@ -10,6 +10,6 @@
     <button onclick="window.location.href='/withdrawPage'">Withdrawal</button>
     <button onclick="window.location.href='/manageOverdraft'">Manage Overdraft</button>
     <button>Make Transfer</button>
-    <button onclick="window.location.href='logout'">Sign Out</button>
+    <button onclick="window.location.href='/logout'">Sign Out</button>
 </body>
 </html>
