--- a/public/manageUsers.html
+++ b/public/manageUsers.html
@@ -9,5 +9,6 @@
     <button onclick="window.location.href='/createCustomerRole'">Create Customer Role</button>
     <button onclick="window.location.href='/removeEmployeeRole'">Stop Employee Role</button>
     <button onclick="window.location.href='/removeCustomerRole'">Stop Customer Role</button>
+    <button onclick="window.location.href='/adminMenu'">Exit</button>
 </body>
 </html>
