--- a/public/Admin.html
+++ b/public/Admin.html
@@ -16,5 +16,6 @@
     <button onclick="window.location.href='/customerAccountAccess'">Manage Accounts</button>
     <button onclick="window.location.href='/adminAccountAccess'">Create new Account</button>
     <button onclick="window.location.href='/createBank'">Create Bank</button>
+    <button onclick="window.location.href='/logout'">Sign Out</button>
 </body>
 </html>
