--- a/public/manageUsers.html
+++ b/public/manageUsers.html
@@ -5,8 +5,10 @@
 </head>
 <body>
     <h1>Manage Users</h1>
-    <button onclick="window.location.href='/createEmployeeRole'">Create Employee Role</button>
-    <button onclick="window.location.href='/createCustomerRole'">Create Customer Role</button>
+    <button onclick="window.location.href='/addNewEmployee'">Create new Employee</button>
+    <button onclick="window.location.href='/addNewCustomer'">Create new Customer</button>
+    <button onclick="window.location.href='/createEmployeeRole'">Start Employee Role</button>
+    <button onclick="window.location.href='/createCustomerRole'">Start Customer Role</button>
     <button onclick="window.location.href='/removeEmployeeRole'">Stop Employee Role</button>
     <button onclick="window.location.href='/removeCustomerRole'">Stop Customer Role</button>
     <button onclick="window.location.href='/adminMenu'">Exit</button>
