--- a/public/addNewCustomer.html
+++ b/public/addNewCustomer.html
@@ -5,7 +5,7 @@
     <script src="/js/addNewCustomer.js" defer></script>
 </head>
 <body>
-    <h1>Create Employee</h1>
+    <h1>Create Customer</h1>
     <form>
         <div><label for="perID">Customer ID:</label> <input id="perID" /></div>
         <div><label for="password">Password:</label> <input id="password" /></div>
